--- a/about/index.html
+++ b/about/index.html
@@ -339,7 +339,7 @@
             return;
         }
         var d = document, s = d.createElement('script'); s.async = true;
-        s.src = '//' + "stella-careers-log" + '.disqus.com/embed.js';
+        s.src = '//' + "salanking" + '.disqus.com/embed.js';
         s.setAttribute('data-timestamp', +new Date());
         (d.head || d.body).appendChild(s);
     })();
