--- a/links/index.html
+++ b/links/index.html
@@ -12,6 +12,8 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Links">
 <meta name="twitter:description" content="一些相關連結">
+    <link rel="shortcut icon" href="images/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4PE8P8YQB"></script>
 <script>
 var doNotTrack = false;
@@ -312,7 +314,7 @@ if (!doNotTrack) {
                     <h2 class="article-title">DesignEvo(免費線上logo製作軟體)</h2>
                     <footer class="article-time">
                         
-                            本站Logo使用此網站做
+                            本站Logo使用此網站製作
                         
                     </footer>
                 </div>
