--- a/search/index.html
+++ b/search/index.html
@@ -12,6 +12,8 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Search">
 <meta name="twitter:description" content=""><link rel="alternate" type="application/json" href="https://salanking.github.io/search/index.json">
+    <link rel="shortcut icon" href="images/favicon.ico" />
+
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4PE8P8YQB"></script>
 <script>
 var doNotTrack = false;
