--- a/about/index.html
+++ b/about/index.html
@@ -27,7 +27,7 @@
 為了想要有個穩定工作進了保險業，卻又因為想要弭平內心不安而輾轉換了幾個公司與職務，從法務、法遵、保險業務、理賠人員、保服的QA。
 後來發現自己從來沒有從事過自己喜歡的工作，為了避免遺憾決定把握機會轉職網路書店的行銷PM，負責自己從小就喜歡的漫畫、小說的行銷。
 在新冠肺炎疫情期間決定辭職，轉職成為軟體工程師，目前在人資系統的SaaS平台服務公司擔任後端工程師。">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4PE8P8YQB"></script>
 <script>
