--- a/links/index.html
+++ b/links/index.html
@@ -12,7 +12,7 @@
 <meta property='og:type' content='article'><meta property='article:section' content='Page' />
 <meta name="twitter:title" content="Links">
 <meta name="twitter:description" content="一些相關連結">
-    <link rel="shortcut icon" href="images/favicon.ico" />
+    <link rel="shortcut icon" href="/images/favicon.ico" />
 
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-X4PE8P8YQB"></script>
 <script>
